# YT-DW

./: .gitignore  LICENSE  OpenMediaDL.spec  README.md  YT-DW.spec  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
docs/: image-generation-prompts.ru.md  visual-assets.md
scripts/: generate_windows_icon.py
src/openmediadl/: __init__.py  __main__.py  appearance.py  application.py  i18n.py  main.py
src/openmediadl/core/: analyzer.py  browser_cookies.py  downloader.py  error_mapper.py  ffmpeg_service.py  filename_service.py  metadata_cleaner.py  metadata_writer.py  progress.py  queue_manager.py  runtime_tools.py  thumbnail_service.py
src/openmediadl/database/: __init__.py  connection.py  migrations.py  repositories.py
src/openmediadl/domain/: __init__.py  download_item.py  download_status.py  media_metadata.py  settings.py
src/openmediadl/ui/: __init__.py  delegates.py  download_table.py  main_window.py  models.py  settings_dialog.py
src/openmediadl/workers/: __init__.py  analysis_worker.py  download_worker.py  ffmpeg_worker.py  runtime_tools_worker.py
tests/: test_analyzer.py  test_appearance.py  test_application.py  test_browser_cookies.py  test_download_worker.py  test_downloader.py  test_error_mapper.py  test_ffmpeg_service.py  test_filename_service.py  test_i18n.py  test_metadata_cleaner.py  test_metadata_writer.py  test_migrations.py  test_progress.py  test_queue_persistence.py  test_queue_restoration.py  test_runtime_tools.py  test_runtime_tools_worker.py  test_settings.py  test_thumbnail_service.py  test_ui_models.py  test_ui_smoke.py
