[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmediadl"
version = "0.1.0"
description = "Local desktop media downloader with deterministic M4A metadata"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "OpenMediaDL contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6>=6.11.1,<7",
    "yt-dlp[default]>=2026.7.4,<2027",
    "Pillow>=12.3.0,<13",
    "mutagen>=1.48.1,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.3.0,<3",
    "PyInstaller>=6.21.0,<7",
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.22,<0.16",
]

[project.gui-scripts]
openmediadl = "openmediadl.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openmediadl = ["resources/*", "resources/**/*"]

[tool.pytest.ini_options]
addopts = '-ra --strict-config --strict-markers -m "not integration"'
testpaths = ["tests"]
markers = [
    "integration: tests that require network access or external services (disabled by default)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src/openmediadl"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["mutagen.*", "yt_dlp.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["openmediadl"]

[tool.coverage.report]
show_missing = true
skip_covered = true
